[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.3"
bytemuck = "1"
arrayvec = "0.7"
num = "0.4"
dynasmrt = "1"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = [
    "rustls-tls",
    "blocking",
    "cookies",
    "gzip",
    "brotli",
    "deflate",
]

[profile.release]
debug = true
